@@ -43,7 +43,8 @@ grammar PDF::Grammar::Content
     rule block:sym<image> {
                       <opBeginImage>
                       <imageDict>
-                      $<start>=<opImageData>.*?$<end>=\n<opEndImage>
+                      [$<start>=<opImageData>.*?$<end>=\n?<opEndImage>
+                      || $<start>=<opImageData>.*?$<end>=<opEndImage>] # more forgiving fallback
     }
 
     proto rule ignored {*}
