@@ -22,7 +22,8 @@ grammar PDF::Grammar::Content::Fast
     rule block:sym<image> {
                       <opBeginImage>
                       <imageDict>
-                      $<start>=<opImageData>.*?$<end>=\n<opEndImage>
+                      [$<start>=<opImageData>.*?$<end>=\n?<opEndImage>
+                      || $<start>=<opImageData>.*?$<end>=<opEndImage>] # more forgiving fallback
     }
 
 
