@@ -1,6 +1,7 @@
 Release 0.1.6
 - Changed PDF::Grammar::COS penultimate token and AST
   element from 'pdf' to 'cos'
+- Add fallback parse for inline content BI .. EI image data
 Release 0.1.5
 - Changed handling of BX .. EX extended blocks. These are
   now parsed, rather than being skipped.
